[gd_scene load_steps=22 format=2]

[ext_resource path="res://resources/Main/background.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Walka/VBoxContainer.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Walka/ButtonAkcji.gd" type="Script" id=3]
[ext_resource path="res://resources/PTC55F.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Tscn/kroki/lvlbar.tscn" type="PackedScene" id=5]
[ext_resource path="res://resources/Walka/ktos.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Walka/kolo.gd" type="Script" id=7]
[ext_resource path="res://resources/Walka/strzalka.png" type="Texture" id=8]
[ext_resource path="res://Scripts/Walka/koloWrog.gd" type="Script" id=9]
[ext_resource path="res://Scripts/Walka/Bfight.gd" type="Script" id=10]
[ext_resource path="res://Scripts/Walka/BEq.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 31
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=10]
size = 31
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]

[node name="Background" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 1 )
centered = false

[node name="Bfight" type="Button" parent="Background"]
margin_left = 120.0
margin_top = 800.0
margin_right = 320.0
margin_bottom = 1100.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
text = "FIGHT"
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BEq" type="Button" parent="Background"]
margin_left = 400.0
margin_top = 800.0
margin_right = 600.0
margin_bottom = 1100.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
text = "torba"
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="kolo" type="Position2D" parent="Background"]
position = Vector2( 360, 350 )

[node name="Button" type="Button" parent="Background/kolo"]
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 400, 400 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="strzalka" type="Sprite" parent="Background/kolo"]
position = Vector2( 0, -227 )
texture = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="Background/kolo"]
script = ExtResource( 7 )

[node name="Background3" type="Sprite" parent="."]
position = Vector2( 4.75684, 0 )
z_index = -1
texture = ExtResource( 1 )
centered = false
offset = Vector2( 720, 0 )

[node name="ktos" type="Sprite" parent="Background3"]
position = Vector2( 905.341, 1046.94 )
texture = ExtResource( 6 )

[node name="ktos2" type="Sprite" parent="Background3"]
position = Vector2( 1244.75, 221.038 )
texture = ExtResource( 6 )

[node name="Button" type="Button" parent="Background3"]
margin_left = 1260.0
margin_top = 500.0
margin_right = 1360.0
margin_bottom = 700.0
rect_min_size = Vector2( 30, 30 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Background3"]
margin_left = 720.0
margin_top = 545.0
margin_right = 1278.0
margin_bottom = 659.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Pasek akcji"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pasekTy" parent="Background3" instance=ExtResource( 5 )]
position = Vector2( 740, 820 )

[node name="pasekWrog" parent="Background3" instance=ExtResource( 5 )]
position = Vector2( 1020, 390 )

[node name="HpWrog" type="Label" parent="Background3"]
margin_left = 1130.0
margin_top = 370.0
margin_right = 1350.0
margin_bottom = 470.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.647059, 0.141176, 0.141176, 1 )
text = "200"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HpTy" type="Label" parent="Background3"]
margin_left = 800.0
margin_top = 800.0
margin_right = 1020.0
margin_bottom = 900.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.74902, 0.227451, 0.227451, 1 )
text = "1000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="koloWrog" type="Position2D" parent="Background3"]
position = Vector2( 920, 300 )
scale = Vector2( 0.75, 0.75 )

[node name="Button" type="Button" parent="Background3/koloWrog"]
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 400, 400 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="strzalka" type="Sprite" parent="Background3/koloWrog"]
position = Vector2( 0, -227 )
texture = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="Background3/koloWrog"]
script = ExtResource( 9 )

[node name="koloTy" type="Position2D" parent="Background3"]
position = Vector2( 1220, 1000 )
scale = Vector2( 0.75, 0.75 )

[node name="Button" type="Button" parent="Background3/koloTy"]
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 400, 400 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="strzalka" type="Sprite" parent="Background3/koloTy"]
position = Vector2( 0, -227 )
texture = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="Background3/koloTy"]
script = ExtResource( 7 )

[node name="Background2" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 1 )
centered = false
offset = Vector2( -720, 0 )

[node name="ScrollContainer" type="ScrollContainer" parent="Background2"]
margin_left = -710.0
margin_top = 30.0
margin_right = -9.99994
margin_bottom = 1230.0
rect_min_size = Vector2( 100, 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Background2/ScrollContainer"]
margin_right = 700.0
margin_bottom = 1200.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
script = ExtResource( 2 )
[connection signal="pressed" from="Background/Bfight" to="Background/Bfight" method="_on_Bfight_pressed"]
[connection signal="pressed" from="Background/BEq" to="Background/BEq" method="_on_BEq_pressed"]
[connection signal="pressed" from="Background/kolo/Button" to="Background/kolo/Sprite" method="_on_Button_pressed"]
[connection signal="pressed" from="Background3/Button" to="Background3/Button" method="_on_Button_pressed"]
[connection signal="pressed" from="Background3/koloWrog/Button" to="Background3/koloWrog/Sprite" method="_on_Button_pressed"]
[connection signal="pressed" from="Background3/koloTy/Button" to="Background3/koloTy/Sprite" method="_on_Button_pressed"]
